--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ footer a {
     color: #024e76;
 }
 
-/* Hero Style Start */
+/* Hero Style START */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -120,12 +120,14 @@ header h3 {
     padding: 10px 20px;
     font-size: 16px;
 }
-/* HERO STYLES END */
+/* Hero Style END */
 
+/* What We Do START */
 .intro {
     text-align: center;
 }
 
+/*
 .intro h2 {
     font-size: 55px;
     color: #024e76;
@@ -133,18 +135,73 @@ header h3 {
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
     border-color: #fce138;
-    /* add this alongside your other declaration */
     display: inline-block;
-}
+} */
 
 .intro p {
     line-height: 1.7;;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
-    /* add this along side your other declarations */
     margin: 0 auto;
 }
+/* What We Do END */
 
+/* What You Do START */
+.steps {
+    text-align: center;
+    background: #fce138;
+}
 
+/*
+.steps h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #39a6b2;
+}*/
 
+/* combining ".intro h2" and ".steps h2" for DRY*/
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    display: inline-block; 
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+.steps div {
+    margin-bottom: 80px;
+}
+
+.steps img{
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+}
+
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+}
+
+.steps span {
+    font-size: 38px;
+}
+/* What You Do END */
