--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,3 +254,36 @@ header h3 {
     line-height: 1.3;
 }
 
+
+/* Reach Out Styles START */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color:#fce138;
+}
+
+.section-title {
+    font-size: 55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom: 35px;
+    columns: #024e76;
+}
+
+.contact-info iframe {
+    width="400";
+    height="400"; 
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
