--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ header h3 {
     font-size: 17px;
     line-height: 1.3;
 }
-
+/* Meet the trainers END */
 
 /* Reach Out Styles START */
 .contact {
@@ -263,15 +263,6 @@ header h3 {
 
 .contact h2 {
     color:#fce138;
-}
-
-.section-title {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    columns: #024e76;
 }
 
 .contact-info iframe {
@@ -287,3 +278,20 @@ header h3 {
     margin: 30px 0 0 60px;
     color: white;
 }
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+/* Reach Out Styles END */
