--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ footer h2 {
     display: inline;
     color: #024e76;
     font-size: 30px;
-    margin:0;
+    margin: 0;
 }
 
 footer div {
@@ -66,7 +66,12 @@ footer a {
     color: #024e76;
 }
 
+section {
+    padding: 60px;
+}
+
 /* Hero Style START */
+/* homepage hero */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -127,19 +132,8 @@ header h3 {
     text-align: center;
 }
 
-/*
-.intro h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-    display: inline-block;
-} */
-
 .intro p {
-    line-height: 1.7;;
+    line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
@@ -151,26 +145,6 @@ header h3 {
 .steps {
     text-align: center;
     background: #fce138;
-}
-
-/*
-.steps h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #39a6b2;
-}*/
-
-/* combining ".intro h2" and ".steps h2" for DRY*/
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    display: inline-block; 
 }
 
 .primary-border {
@@ -203,6 +177,16 @@ header h3 {
 
 .steps span {
     font-size: 38px;
+}
+
+/* combining ".intro h2" and ".steps h2" for DRY*/
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    display: inline-block; 
 }
 /* What You Do END */
 
@@ -262,12 +246,12 @@ header h3 {
 }
 
 .contact h2 {
-    color:#fce138;
+    color: #fce138;
 }
 
 .contact-info iframe {
-    width="400";
-    height="400"; 
+    width: 400px;
+    height: 400px;
 }
 
 .contact-info div {
@@ -284,7 +268,8 @@ header h3 {
     font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
